2004-03-14  Derek Price  <derek@ximbiot.com>

	* add.c (add): Update file resurrection messages for consistency.
	* sanity.sh: Update to match.

2004-03-13  Derek Price  <derek@ximbiot.com>

	* server.c (server_updated): Fix header comment.

2004-03-13  Derek Price  <derek@ximbiot.com>

	* Makefile.am (cvs_SOURCES): Remove error.h since it is now included in
	lib.
	* Makefile.in: Regenerated.

2004-03-09  Larry Jones  <lawrence.jones@ugsplm.com>

	* run.c: Move #includes required for cmdline_escape and friends...
	* subr.c: ...to here.

2004-03-07  Derek Price  <derek@ximbiot.com>

	* run.c (struct cmdline_bindings, cmdline_bindings_hash_node_delete,
	cmdline_escape, cmdline_quote, format_cmdline): Move...
	* subr.c: ...here so they will compile under Windows.

2004-03-03  Derek Price  <derek@ximbiot.com>

	* import.c (import): Check that the module name specified by the user
	does not contain `CVS' as a directory name.
	* ignore.c (ign_add): Never cease ignoring "CVS" - it is a reserved
	name.
	(Original patch from Dan Peterson <dbpete@aol.com>.)

	* sanity.sh (import-CVS): New tests for the above.

2004-02-29  Larry Jones  <lawrence.jones@ugsplm.com>

	* import.c (expand_at_signs): Change type of len to size_t.
	* subr.c (resolve_symlink): Move declaration of newname inside
	#ifdef, clean up coding style.
	* zlib.c (gunzip_and_write): Fix up potential overlow problems.
	(read_and_gzip): Add explicit casts to placate paranoid compilers.

2004-02-28  Larry Jones  <lawrence.jones@ugsplm.com>

	* sanity.sh (join6): New tests for previous fix.

	* update.c (join_file): One more fix to avoid dereferencing NULL.
	(Reported by Steve McIntyre <steve@einval.com>.)
	* sanity.sh (join6): New tests for above.

2004-02-25  Larry Jones  <lawrence.jones@ugsplm.com>

	* update.c (join_file): Fix optimization to avoid dereferencing NULL.
	(Reported by Steve McIntyre <steve@einval.com>.)

2004-02-25  Derek Price  <derek@ximbiot.com>
